--- a/form.html
+++ b/form.html
@@ -129,7 +129,7 @@
           <a class="btn-item" href="map.html">Go Back</a>
         </div>
       </div>
-      <form method="post" action="/">
+      <form method="post" action="/details">
         <div class="title">
           <i class="fas fa-pencil-alt"></i> 
           <h2>Register here</h2>
