--- a/map.html
+++ b/map.html
@@ -29,7 +29,7 @@
             });
 
             var infoWindow = new google.maps.InfoWindow({
-                content:'<h1> Coimbatore Institute Of Technology </h1><br> <h2>Address: </h2><p>Avinashi Rd, <br>Civil Aerodrome Post, <br>Coimbatore, <br>Tamil Nadu 641014 <br> </p> <h2>Website: </h2><a href="https://www.cit.edu.in/">https://www.cit.edu.in/</a><br><h2>Virtual Tour: </h2><a href="form.html">Visit us</a>'
+                content:'<h1> Coimbatore Institute Of Technology </h1><br> <h2>Address: </h2><p>Avinashi Rd, <br>Civil Aerodrome Post, <br>Coimbatore, <br>Tamil Nadu 641014 <br> </p> <h2>Website: </h2><a href="https://www.cit.edu.in/">https://www.cit.edu.in/</a><br><h2>Virtual Tour: </h2><a href="index.html">Visit us</a>'
             });
 
             marker.addListener('click', function(){
